// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHtml default 1`] = `
"
		<html class=\\"pdf\\">
			<head>
        
        <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

        <link rel=\\"icon\\" href=\\"assets/favicon.ico\\" />

        <title>CV</title>
        <meta name=\\"description\\" content=\\"CV made with cv-maker\\">
    

				<style>
          
					
				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages\\">
					<div class=\\"page\\" id=\\"p1\\"><h1>Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2>Experience</h2>
<h3>Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3>Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3>Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3>Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2>Education</h2>
<h3>BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3>BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3>Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3>High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3>Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2>About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>

          
				</div>
			</body>
		</html>
	"
`;

exports[`generateHtml for website 1`] = `
"
		<html class=\\"pdf\\">
			<head>
        
    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"assets/favicon.ico\\" />

    <title>Joe Bloggs CV</title>
    <meta name=\\"description\\" content=\\"Enter a summary of you here.\\">

    <!--  Social tags -->    
    <meta property=\\"og:description\\" content=\\"Enter a summary of you here.\\">
    <meta property=\\"og:image\\" content=\\"https://cv.joebloggs.com/preview.png\\">
    <meta property=\\"og:site_name\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:title\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:url\\" content=\\"https://cv.joebloggs.com/\\">

    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\">
    <meta name=\\"twitter:image:alt\\" content=\\"Joe Bloggs CV\\">
    <meta name=\\"twitter:site\\" content=\\"undefined\\">
  

				<style>
          
					
				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages\\">
					<div class=\\"page\\" id=\\"p1\\"><h1>Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2>Experience</h2>
<h3>Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3>Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3>Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3>Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2>Education</h2>
<h3>BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3>BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3>Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3>High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3>Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2>About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>

          
				</div>
			</body>
		</html>
	"
`;

exports[`generateHtml with array 1`] = `
"
		<html class=\\"pdf\\">
			<head>
        
    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"assets/favicon.ico\\" />

    <title>Joe Bloggs CV</title>
    <meta name=\\"description\\" content=\\"Enter a summary of you here.\\">

    <!--  Social tags -->    
    <meta property=\\"og:description\\" content=\\"Enter a summary of you here.\\">
    <meta property=\\"og:image\\" content=\\"https://cv.joebloggs.com/preview.png\\">
    <meta property=\\"og:site_name\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:title\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:url\\" content=\\"https://cv.joebloggs.com/\\">

    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\">
    <meta name=\\"twitter:image:alt\\" content=\\"Joe Bloggs CV\\">
    <meta name=\\"twitter:site\\" content=\\"undefined\\">
  

				<style>
          
					
				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages\\">
					<div class=\\"page\\" id=\\"p1\\"><h1>Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2>Experience</h2>
<h3>Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3>Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3>Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3>Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2>Education</h2>
<h3>BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3>BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3>Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3>High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3>Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2>About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
 <h1>Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2>Experience</h2>
<h3>Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3>Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3>Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p3\\"></p>
<h3>Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2>Education</h2>
<h3>BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3>BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3>Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3>High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3>Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2>About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>

          
				</div>
			</body>
		</html>
	"
`;

exports[`generateHtml with standard options 1`] = `
"
		<html class=\\"pdf\\">
			<head>
        
    <meta name=\\"viewport\\" content=\\"width=device-width,initial-scale=1,maximum-scale=2,shrink-to-fit=no\\">

    <link rel=\\"icon\\" href=\\"assets/favicon.ico\\" />

    <title>Joe Bloggs CV</title>
    <meta name=\\"description\\" content=\\"Enter a summary of you here.\\">

    <!--  Social tags -->    
    <meta property=\\"og:description\\" content=\\"Enter a summary of you here.\\">
    <meta property=\\"og:image\\" content=\\"https://cv.joebloggs.com/preview.png\\">
    <meta property=\\"og:site_name\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:title\\" content=\\"The CV of Joe Bloggs\\">
    <meta property=\\"og:url\\" content=\\"https://cv.joebloggs.com/\\">

    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\">
    <meta name=\\"twitter:image:alt\\" content=\\"Joe Bloggs CV\\">
    <meta name=\\"twitter:site\\" content=\\"undefined\\">
  

				<style>
          
					
				</style>
			</head>
			
			<body class=\\"document\\">
				<div class=\\"pages\\">
					<div class=\\"page\\" id=\\"p1\\"><h1>Max Clayton Clowes</h1>
<p><a href=\\"mailto:contact@mcclowes.com\\">contact@mcclowes.com</a> · <a href=\\"tel:+447976136097\\">+44 (0) 7976 136 097</a> · <a href=\\"https://mcclowes.com\\">mcclowes.com</a></p>
<h2>Experience</h2>
<h3>Software Engineer (FE) <em>- Pollen</em></h3>
<p><em>December 2019 - Ongoing</em></p>
<p>Developed Pollen’s checkout and payment application (React/Next.js/GraphQL).</p>
<h3>Software Engineer (FE) <em>- Workshare</em></h3>
<p><em>August 2018 - November 2019</em></p>
<p>Built Transact, a document management &amp; sign-off web app (React/Redux). Collaborated with design to define roadmap. Trained junior team members and pioneered our best practices.</p>
<h3>Product Engineer &amp; Manager <em>- Codogo</em></h3>
<p><em>April 2016 - August 2018</em></p>
<p>Founded Codogo after winning several enterprise awards. Established an agency business, supporting development of our own product, Write. I personally:</p>
<ul>
<li>Designed and delivered products for 30+ clients ranging from the NHS to leading financial think-tanks.</li>
<li>Developed software, websites, web apps, and native apps, utilising a range of modern technologies.</li>
<li>Managed (Agile) and supported the growth of my small team.</li>
<li>Pitched to top investors, including being flown out to Y Combinator based on the strength of the Alpha of our product, Codogo Write.</li>
</ul>
<p></div> <div class=\\"page\\" id=\\"p2\\"></p>
<h3>Other Experience</h3>
<ul>
<li>Development &amp; Design Intern <em>- Akkroo, 2015</em></li>
<li>Design Contractor <em>- Ludifi, 2014</em></li>
<li>Design Contractor <em>- 4J Studios, 2013</em></li>
<li>Junior UX Designer <em>- Better Brief, 2012 - 2013</em></li>
<li>Project manager <em>- Godfreys.co, 2011 - 2012</em></li>
</ul>
<h2>Education</h2>
<h3>BSc (Hons) Computer Science, 2:1 <em>- Durham University</em></h3>
<p><em>2012 - 2016</em><br>British Computing Society accredited. Awarded Rising Star of Research.<br>Dissertation: <em>The use of evolutionary AI in the balancing of competitive multiplayer games</em></p>
<h3>BA Interaction Design (Year 1) <em>- Ravensbourne College of Design</em></h3>
<p><em>2011 - 2012</em></p>
<h3>Foundation Diploma in Art and Design <em>- London College of Communication</em></h3>
<p><em>2010 - 2011</em><br>Graphic Design pathway</p>
<h3>High School <em>- City of London School</em></h3>
<p><em>2003 - 2010</em><br>A levels: <em>Physics, Economics, Music</em></p>
<h3>Other Training</h3>
<ul>
<li>Project Management <em>- SuperHi, 2019</em></li>
<li>Advanced iOS Development <em>- City University, 2012</em></li>
<li>Adva nced C Programming <em>- City University, 2011</em></li>
</ul>
<h2>About Me</h2>
<p>Regularly attend PM conferences &amp; meet-ups <em>(Elevate, Product School)</em>. Regularly attend developer meet-ups <em>(React London, GitHub Universe, Next Conf)</em>. Currently work mainly with React <em>(ES6)</em>.</p>
<p>Runner (1st marathon coming up in December), cyclist, rock climber, and dancer (1st place university circuit). Singer and multi-instrumentalist.</p>
</div>

          
				</div>
			</body>
		</html>
	"
`;
